--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-<meta http-equiv="refresh" content="1;url=https://gitcdn.xyz/repo/besoeasy/shufflix/master/index.html" />
+<meta http-equiv="refresh" content="3;url=https://gitcdn.xyz/repo/besoeasy/shufflix/master/index.html" />
+
+Wait 3 Seconds Or 
+Click To View Github : <a href=https://github.com/besoeasy/shufflix>https://github.com/besoeasy/shufflix</a>
